<resources>
    <string name="app_name">Contacts</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_name">Ricardo Centeno</string>
    <string name="my_company">Mobintum</string>
    <string name="my_city">CD MX</string>
    <string name="img_description">default</string>
    <string name="tel">Tel: 55 14382887</string>
    <string name="email">Email: ricardo.celj@gmail.com</string>
    <string name="github_user">Github: rickstart</string>
    <string name="twitter_user">Twitter: @rickstart</string>
    <string name="back"><![CDATA[<--]]></string>
</resources>
